base controller testing