@@ -70,12 +70,20 @@
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        
+        <!-- Tests -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
-        </dependency>         
+        </dependency> 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>                     
         
         <!-- Messaging -->
         <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-spring -->
@@ -345,6 +353,19 @@
                     </gitDescribe>
                 </configuration>
             </plugin>
+            <!-- Workaround for InaccessibleObjectException in Java 21 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/java.time.format=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>            
             <!-- Junit 5 Runner -->
             <!--            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
